--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,13 +16,13 @@
             <nav>
                 <div>
                     <a href="/">Home</a>
-                    <a href="/dashboard">Dashboard</a>
-                    <a href="#">Search</a>
+                    <a href="/animal/dashboard">Dashboard</a>
+                    <a href="/animal/search">Search</a>
                 </div>
 
                 <!-- Logged-in users -->
                 <div class="user">
-                    <a href="/add/animal">Add Animal</a>
+                    <a href="/animal/create">Add Animal</a>
                     <a href="/logout">Logout</a>
                 </div>
 
