--- a/views/partials/animalCard.hbs
+++ b/views/partials/animalCard.hbs
@@ -2,5 +2,5 @@
       <img src="{{imageUrl}}" />
       <p>Name: {{name}}</p>
       <p>Need of: {{needs}}</p>
-      <a class="details-btn" href="/{{_id}}/details">Details</a>
+      <a class="details-btn" href="/animal/{{_id}}/details">Details</a>
     </div>
