--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,13 +23,13 @@
                 <!-- Logged-in users -->
                 <div class="user">
                     <a href="/animal/create">Add Animal</a>
-                    <a href="/logout">Logout</a>
+                    <a href="/user/logout">Logout</a>
                 </div>
 
                 <!-- Guest users -->
                 <div class="guest">
-                    <a href="/login">Login</a>
-                    <a href="/register">Register</a>
+                    <a href="/user/login">Login</a>
+                    <a href="/user/register">Register</a>
                 </div>
             </nav>
         </header>
