--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -3,15 +3,17 @@
             <section id="create">
                 <div class="form">
                     <h2>Edit item</h2>
-                    <form class="create-form">
-                        <input type="text" name="" id="name" placeholder="Name" value="Show" />
-                        <input type="text" name="" id="years" placeholder="Years" value="1" />
-                        <input type="text" name="" id="kind" placeholder="Kind" value="Lion" />
-                        <input type="text" name="" id="animal-img" placeholder="Image url" value="" />
-                        <input type="text" name="" id="needs-of" placeholder="Needs of" value="Medicine" />
-                        <input type="text" name="" id="location" placeholder="Location" value="San Diego Zoo" />
+                    <form class="create-form" method="POST">
+                        {{#with animal}}
+                        <input type="text" name="name" id="name" placeholder="Name" value="{{name}}" />
+                        <input type="text" name="years" id="years" placeholder="Years" value="{{years}}" />
+                        <input type="text" name="kind" id="kind" placeholder="Kind" value="{{kind}}" />
+                        <input type="text" name="imageUrl" id="animal-img" placeholder="Image url" value="{{imageUrl}}" />
+                        <input type="text" name="needs" id="needs-of" placeholder="Needs of" value="{{needs}}" />
+                        <input type="text" name="location" id="location" placeholder="Location" value="{{location}}" />
                         <textarea id="description" placeholder="Description..."
-                            name="">Your donation goes a long way towards our cause. Every dollar and item donated goes to the care of lions, animals, and caretakers in urgent need, as well as providing grants to exceptional sanctuaries, and emergency relief efforts in the US and around the world. Tell us where you'd like your gift to go and we will customize your introductory packet to your preferences!</textarea>
+                            name="description">{{description}}</textarea>
+                        {{/with}}    
 
                         <button type="submit">Edit</button>
                     </form>
